@startuml
title ASCS Six-Stage Sequential Clearance Workflow
top to bottom direction
skinparam shadowing false
skinparam defaultFontName Arial
skinparam state {
  BackgroundColor #E0F2FE
  BorderColor #334155
  FontColor #0F172A
}

[*] --> Librarian : Student submits
Librarian --> Accountant : approved
Librarian --> NotApproved : not_approved
Accountant --> OSA : paid
Accountant --> NotApproved : unpaid
OSA --> Guidance : approved
OSA --> NotApproved : not_approved
Guidance --> AreaChair : approved
Guidance --> NotApproved : not_approved
AreaChair --> Dean : approved
AreaChair --> NotApproved : not_approved
Dean --> Approved : approved
Dean --> NotApproved : not_approved

state "Librarian Clearance\nStage 1" as Librarian
state "Accountant Clearance\nStage 2 · financialStatus" as Accountant
state "OSA Coordinator Clearance\nStage 3" as OSA
state "Guidance Counselor Clearance\nStage 4" as Guidance
state "Area Chair Clearance\nStage 5" as AreaChair
state "Dean Clearance\nStage 6" as Dean
state Approved
state "Not Approved" as NotApproved

Approved --> [*] : printableAvailable = true
NotApproved --> [*] : print blocked; remarks visible

note right of Accountant
Accountant is a financial gate, not
an approval subdocument. OSA unlocks
only after Librarian approved and
financialStatus = paid.
end note

note right of Dean
Dean is the fifth signatory approval
row and sixth workflow stage.
Dean reports remain separately scoped.
end note

note bottom of Approved
All five signatory rows approved
and financialStatus = paid.
end note
@enduml
